fix height and alignment for mobile sidebar

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -3401,7 +3401,7 @@ small.summary__item__value {
 
     .sidebar {
         width: 100%;
-        height: 80px;
+        height: 120px;
         position: fixed;
         bottom: 0;
     }
@@ -3415,7 +3415,7 @@ small.summary__item__value {
 
     .sidebar__list {
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
     }
 
     .sidebar__divider {
